--- a/src/app/settings/wallet-settings/wallet-settings.component.css
+++ b/src/app/settings/wallet-settings/wallet-settings.component.css
@@ -15,3 +15,9 @@
 .card {
   background-color: #636fa4 !important;
 }
+
+@media (max-width: 768px) {
+  .card {
+    margin-bottom: 1.2rem!important;
+  }
+}
